ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-backend-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: library.aws11.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-backend-service
            port:
              number: 8001
